@@ -83,7 +83,7 @@ com.sun.jersey.version = 1.8
 /org.antlr/antlr-runtime = 3.5
 /org.apache.ant/ant = 1.8.2
 /org.apache.avro/avro = 1.7.4
-/org.apache.commons/commons-compress = 1.4.1
+/org.apache.commons/commons-compress = 1.7
 /org.apache.derby/derby = 10.9.1.0
 
 org.apache.hadoop.version = 2.2.0
